RockWeb/Styles/Blocks/Checkin/CheckInKiosk.css
/* ... */
.check-in-page .page-footer .actions {
    flex-grow: 1;
    display: flex;
    justify-content: end;
    gap: var(--spacing-xsmall);
}

.check-in-page .page-footer .configure-button {
    padding: 0;
    font-size: var(--font-size-h3);
    color: var(--color-interface-soft);
}

.check-in-page .actions .btn.btn-primary.next-button {
    font-size: var(--font-size-regular);
    padding: var(--spacing-xsmall) var(--spacing-xlarge);
}

.check-in-page .actions .btn.btn-primary {
    font-size: var(--font-size-h3);
    padding: var(--spacing-xsmall) var(--spacing-large);
}

/*
 * Configuration Screen.
 */
.check-in-page .configuration-screen {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.check-in-page .configuration-screen .saved-configurations {
    display: flex;
    flex-direction: column;
    gap: var(--spacing-xsmall);
}

.check-in-page .configuration-screen .saved-configurations .header,
.check-in-page .configuration-screen .custom-configuration .header {
    display: flex;
    align-items: center;
    gap: var(--spacing-xsmall);
}

.check-in-page .configuration-screen .saved-configurations .header h4,
.check-in-page .configuration-screen .custom-configuration .header h4 {
    flex-grow: 1;
}

.check-in-page .configuration-screen .actions {
    display: flex;
    flex-grow: 1;
    align-items: end;
    justify-content: end;
}

.check-in-page .saved-configuration-button .subtitle {
    flex-grow: 1;
    text-align: left;
}

/*
 * Welcome Screen
 */
.check-in-page .welcome-screen {
    display: grid;
    height: 100%;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 2fr 1fr;
    gap: var(--spacing-xsmall);
}

.check-in-page .welcome-screen .promotions {
    background: var(--color-interface-soft);
    grid-row: 1/3;
    grid-column: 1/2;
    border-radius: var(--spacing-medium);
    position: relative;
    overflow: hidden;
}

.check-in-page .welcome-screen .promotion {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-position: center;
    background-size: cover;
}

.check-in-page .welcome-screen .promotion-enter-active,
.check-in-page .welcome-screen .promotion-leave-active {
    transition: opacity 0.4s ease;
}

.check-in-page .welcome-screen .promotion-enter-from,
.check-in-page .welcome-screen .promotion-leave-to {
    opacity: 0;
}

.check-in-page .welcome-screen .start-button {
    grid-row: 1/2;
    grid-column: 2/3;
    width: 100%;
    height: 100%;
    font-size: 110px;
    font-weight: var(--font-weight-bold);
    border-radius: var(--spacing-medium);
}

.check-in-page .welcome-screen .scan-barcode-button {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    grid-row: 2/3;
    grid-column: 2/3;
    width: 100%;
    height: 100%;
    background-color: var(--color-interface-soft);
    padding: 0;
    border-radius: var(--spacing-medium);
}

.check-in-page .welcome-screen .scan-barcode-button .title {
    font-size: 64px;
}

.check-in-page .welcome-screen .scan-barcode-button .subtitle {
    font-size: var(--font-size-h4);
}

.check-in-page .welcome-screen.camera-disabled .start-button {
    grid-row: 1/3;
}

.check-in-page .welcome-screen.camera-disabled .scan-barcode-button {
    display: none;
}

.check-in-page .welcome-screen.kiosk-closed,
.check-in-page .welcome-screen.kiosk-not-open,
.check-in-page .welcome-screen.kiosk-not-open-yet {
    grid-template-rows: 100%;
    grid-template-columns: 100%;
}

.check-in-page .welcome-screen.kiosk-closed .promotions,
.check-in-page .welcome-screen.kiosk-not-open .promotions,
.check-in-page .welcome-screen.kiosk-not-open-yet .promotions {
    grid-row: 1/2;
}

/*
 * Search Screen.
 */
.check-in-page .search-screen {
    display: flex;
    min-height: 100%;
    justify-content: center;
    align-items: center;
}

.check-in-page .search-screen input.search-term {
    height: 64px;
    font-size: var(--font-size-h2);
    width: 0;
    min-width: 100%;
}

.check-in-page .search-screen .search-button {
    height: 56px;
    min-width: 400px;
}

.check-in-page .input-group .btn.btn-default {
    padding: 7px var(--spacing-small);
    font-size: var(--font-size-regular);
}
/**
 * Family Select Screen.
 */
.check-in-page .family-select-screen .button-list .btn {
    justify-content: center;
}


/**
 * Person Select Screen.
 */
.check-in-page .attendee-button .title {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    align-items: start;
}

.check-in-page .attendee-button .opportunity {
    display: flex;
    gap: var(--spacing-tiny);
    font-size: var(--font-size-regular);
}

.check-in-page .attendee-button .opportunity + .opportunity {
    margin-top: var(--spacing-tiny);
}

.check-in-page .attendee-button .message {
    font-size: var(--font-size-regular);
}


/**
 * Schedule Select Screen
 */
.check-in-page .schedule-select-screen .button-list {
    flex-direction: row;
    justify-content: center;
}


/**
 * Ability Level Select Screen
*/


/**
 * Success Screen
 */
.check-in-page .completed-achievements {
    justify-content: center;
    display: flex;
    flex-wrap: wrap;
    padding-bottom: var(--spacing-xsmall);
}

.check-in-page .achievement-card {
    border-radius: var(--spacing-tiny);
    background-color: white;
    border: var(--rounded-tiny) solid var(--color-interface-soft);
    padding: var(--spacing-xsmall) var(--spacing-medium);
    display: grid;
    line-height: 1.3em;
}

.label-info {
    background-color: rgba(255,255,255,.2);
    color: var(--color-interface-softest);
    font-weight: var(--font-weight-regular);
}

.check-in-page .achievement-card svg {
    grid-row: 1 / span 2;
    margin-right: var(--spacing-medium);
}

.check-in-page .achievement-card .title {
    grid-column: 2;
    align-content: end;
    font-weight: var(--font-weight-semibold);
}

.check-in-page .achievement-card .subtitle {
    grid-column: 2;
    grid-row: 2;
    justify-content: start;
}
/* ... */

